# RipCatch

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLE_ENHANCEMENT.md  FOLDER_STRUCTURE.md  GITHUB_PREPARATION_SUMMARY.md  GIT_LFS_SETUP.md  LICENSE  NOTEBOOK_COMPARISON.md  NOTEBOOK_DESCRIPTIONS_ENHANCEMENT.md  QUICK_START.md  README.md  RENAME_GITHUB_REPO.md  UPDATE_SUMMARY.md  enhance_v1_notebook.py  environment.yml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
RipCatch-v1.1/Documentation/: LOCAL_SETUP_GUIDE.md
RipCatch-v2.0/Documentation/: NOTEBOOK_PLAN.md  TRAINING_SUMMARY_REPORT.md
RipCatch-v2.0/Model/: args.yaml
RipCatch-v2.0/Results/: evaluation_results.json  results.csv
